--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <header>
-        <h1>Innovative Blood Management: Bridging the Gap Between Donors and Patients?!!</h1>
+        <h1>Innovative Blood Management: Bridging the Gap Between Donors and Patients!</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
